# cohen-sutherland-demo

./: CMakeLists.txt  main.cpp
